refactor: Use only server IDs for MCP lookups - Remove service name/keyword matching logic from identify_required_servers - Replace with direct ID-based get_servers_by_ids function - Update analyze_workflow_request to return specific server IDs - Add missing supabase and context7 configurations to config.json - Add credential instructions for supabase and context7 in credinfo.json - Ensure consistent server IDs across all configuration files

--- a/config.json
+++ b/config.json
@@ -1,5 +1,17 @@
 {
   "mcpServers": {
+    "supabase": {
+      "command": "npx",
+      "args": ["-y", "@supabase/mcp-server"],
+      "env": {
+        "SUPABASE_URL": "https://your-project.supabase.co",
+        "SUPABASE_ANON_KEY": "your-anon-key"
+      }
+    },
+    "context7": {
+      "command": "npx",
+      "args": ["-y", "@context7/mcp-server"]
+    },
     "gmail": {
       "command": "npx",
       "args": ["-y", "gmail-mcp-server"],
